--- a/src/NoName/Repository/Repository.csproj
+++ b/src/NoName/Repository/Repository.csproj
@@ -52,6 +52,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FileScanner.cs" />
     <Compile Include="ISessionManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository.cs" />
@@ -61,6 +62,14 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Factories\Factories.csproj">
+      <Project>{6654386a-20d1-4fb8-933e-96f21caba1dd}</Project>
+      <Name>Factories</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\NoName\Domain.csproj">
+      <Project>{067496D6-F8E1-4B57-B8DF-89CB553A98C5}</Project>
+      <Name>Domain</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Repository.Interfaces\Repository.Interfaces.csproj">
       <Project>{F5BC01DD-6C95-46B0-B5E4-7CE93AA676BB}</Project>
       <Name>Repository.Interfaces</Name>
