Began mapping: Added Entity, EntityMap, MediaFileMap, AudioFileMap.

--- a/src/NoName/Domain.Mapping/Domain.Mapping.csproj
+++ b/src/NoName/Domain.Mapping/Domain.Mapping.csproj
@@ -55,10 +55,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AudioFileMap.cs" />
+    <Compile Include="EntityMap.cs" />
+    <Compile Include="MediaFileMap.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\NoName\Domain.csproj">
+      <Project>{067496D6-F8E1-4B57-B8DF-89CB553A98C5}</Project>
+      <Name>Domain</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
