--- a/src/NoName/Repository/Repository.csproj
+++ b/src/NoName/Repository/Repository.csproj
@@ -61,6 +61,14 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Domain.Mapping\Domain.Mapping.csproj">
+      <Project>{fe391907-703d-49e6-83db-084f4c4da555}</Project>
+      <Name>Domain.Mapping</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\NoName\Domain.csproj">
+      <Project>{067496d6-f8e1-4b57-b8df-89cb553a98c5}</Project>
+      <Name>Domain</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Repository.Interfaces\Repository.Interfaces.csproj">
       <Project>{F5BC01DD-6C95-46B0-B5E4-7CE93AA676BB}</Project>
       <Name>Repository.Interfaces</Name>
