Work in progress, almost done media file filling database

--- a/src/NoName/Repository.Interfaces/Repository.Interfaces.csproj
+++ b/src/NoName/Repository.Interfaces/Repository.Interfaces.csproj
@@ -61,6 +61,16 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Domain.Mapping\Domain.Mapping.csproj">
+      <Project>{fe391907-703d-49e6-83db-084f4c4da555}</Project>
+      <Name>Domain.Mapping</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\NoName\Domain.csproj">
+      <Project>{067496d6-f8e1-4b57-b8df-89cb553a98c5}</Project>
+      <Name>Domain</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
