--- a/src/NoName/ServerGUI/ServerGUI.csproj
+++ b/src/NoName/ServerGUI/ServerGUI.csproj
@@ -65,7 +65,6 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="FileScanner.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -110,6 +109,10 @@
     <ProjectReference Include="..\Repository\Repository.csproj">
       <Project>{6b3a6a03-684a-494d-8a41-5fd314dec644}</Project>
       <Name>Repository</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Scanner\Scanner.csproj">
+      <Project>{aafb6ac1-3465-4e17-bf37-2a4c36419cb7}</Project>
+      <Name>Scanner</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
