Some corections to castle windsor, added MediaFile repository, addings to global.asax

--- a/src/NoName/Repository.Interfaces/Repository.Interfaces.csproj
+++ b/src/NoName/Repository.Interfaces/Repository.Interfaces.csproj
@@ -55,6 +55,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IMediaFileRepository.cs" />
     <Compile Include="IAudioFileRepository.cs" />
     <Compile Include="IRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
