Included Get All Media Files

--- a/src/NoName/WebLayer/WebLayer.csproj
+++ b/src/NoName/WebLayer/WebLayer.csproj
@@ -22,6 +22,7 @@
     <IISExpressUseClassicPipelineMode />
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
+    <UseGlobalApplicationHostFile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -267,6 +268,10 @@
     <ProjectReference Include="..\Repository\Repository.csproj">
       <Project>{6b3a6a03-684a-494d-8a41-5fd314dec644}</Project>
       <Name>Repository</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Scanner\Scanner.csproj">
+      <Project>{aafb6ac1-3465-4e17-bf37-2a4c36419cb7}</Project>
+      <Name>Scanner</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
