--- a/src/NoName/NoName/Domain.csproj
+++ b/src/NoName/NoName/Domain.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Audio\Song.cs" />
     <Compile Include="Entity.cs" />
     <Compile Include="Genre.cs" />
+    <Compile Include="Logger.cs" />
     <Compile Include="MediaFile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="User.cs" />
