--- a/src/NoName/WebLayer/WebLayer.csproj
+++ b/src/NoName/WebLayer/WebLayer.csproj
@@ -293,8 +293,7 @@
     <Content Include="Views\MediaFile\AddFiles.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
-    <Folder Include="Music\" />
+    <Folder Include="App_Data\Music\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
