--- a/src/NoName/WebLayer/WebLayer.csproj
+++ b/src/NoName/WebLayer/WebLayer.csproj
@@ -237,6 +237,30 @@
     <Content Include="Scripts\360-player\360 button - large.psd" />
     <Content Include="Scripts\360-player\360 button.psd" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
+    <Content Include="Scripts\JQ Upload\css\demo-ie8.css" />
+    <Content Include="Scripts\JQ Upload\css\demo.css" />
+    <Content Include="Scripts\JQ Upload\css\jquery.fileupload-noscript.css" />
+    <Content Include="Scripts\JQ Upload\css\jquery.fileupload-ui-noscript.css" />
+    <Content Include="Scripts\JQ Upload\css\jquery.fileupload-ui.css" />
+    <Content Include="Scripts\JQ Upload\css\jquery.fileupload.css" />
+    <Content Include="Scripts\JQ Upload\css\style.css" />
+    <Content Include="Scripts\JQ Upload\img\loading.gif" />
+    <Content Include="Scripts\JQ Upload\img\progressbar.gif" />
+    <Content Include="Scripts\JQ Upload\js\app.js" />
+    <Content Include="Scripts\JQ Upload\js\cors\jquery.postmessage-transport.js" />
+    <Content Include="Scripts\JQ Upload\js\cors\jquery.xdr-transport.js" />
+    <Content Include="Scripts\JQ Upload\js\jquery.fileupload-angular.js" />
+    <Content Include="Scripts\JQ Upload\js\jquery.fileupload-audio.js" />
+    <Content Include="Scripts\JQ Upload\js\jquery.fileupload-image.js" />
+    <Content Include="Scripts\JQ Upload\js\jquery.fileupload-jquery-ui.js" />
+    <Content Include="Scripts\JQ Upload\js\jquery.fileupload-process.js" />
+    <Content Include="Scripts\JQ Upload\js\jquery.fileupload-ui.js" />
+    <Content Include="Scripts\JQ Upload\js\jquery.fileupload-validate.js" />
+    <Content Include="Scripts\JQ Upload\js\jquery.fileupload-video.js" />
+    <Content Include="Scripts\JQ Upload\js\jquery.fileupload.js" />
+    <Content Include="Scripts\JQ Upload\js\jquery.iframe-transport.js" />
+    <Content Include="Scripts\JQ Upload\js\main.js" />
+    <Content Include="Scripts\JQ Upload\js\vendor\jquery.ui.widget.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
