--- a/src/NoName/WebLayer/WebLayer.csproj
+++ b/src/NoName/WebLayer/WebLayer.csproj
@@ -235,6 +235,7 @@
     <Content Include="Scripts\360-player\360 button %28retina - playing%29.psd" />
     <Content Include="Scripts\360-player\360 button - large.psd" />
     <Content Include="Scripts\360-player\360 button.psd" />
+    <None Include="Properties\PublishProfiles\Local.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\JQ Upload\css\demo-ie8.css" />
     <Content Include="Scripts\JQ Upload\css\demo.css" />
@@ -363,7 +364,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>61795</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost//</IISUrl>
+          <IISUrl>http://localhost/Holy</IISUrl>
           <OverrideIISAppRootUrl>True</OverrideIISAppRootUrl>
           <IISAppRootUrl>http://localhost/</IISAppRootUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
