--- a/src/NoName/Factories/packages.config
+++ b/src/NoName/Factories/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ID3" version="0.3.0" targetFramework="net45" />
+  <package id="ID3.Files" version="0.3.0" targetFramework="net45" />
   <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net45" />
   <package id="NHibernate" version="4.0.4.4000" targetFramework="net45" />
 </packages>
