--- a/src/NoName/WebLayer/Web.config
+++ b/src/NoName/WebLayer/Web.config
@@ -27,6 +27,7 @@
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" maxRequestLength="2147483647" executionTimeout="3600"
                  requestLengthDiskThreshold="2147483647" />
+      <customErrors mode="RemoteOnly" defaultRedirect="Error.html"/>
   </system.web>
   <system.webServer>
     <modules>
