--- a/src/NoName/WebLayer/WebLayer.csproj
+++ b/src/NoName/WebLayer/WebLayer.csproj
@@ -336,6 +336,7 @@
     <Content Include="Views\MediaFile\Index.cshtml" />
     <Content Include="Views\MediaFile\AddFiles.cshtml" />
     <Content Include="Error.html" />
+    <Content Include="Views\MediaFile\View.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -349,6 +350,10 @@
     <None Include="Project_Readme.html" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Factories\Factories.csproj">
+      <Project>{6654386A-20D1-4FB8-933E-96F21CABA1DD}</Project>
+      <Name>Factories</Name>
+    </ProjectReference>
     <ProjectReference Include="..\NoName\Domain.csproj">
       <Project>{067496D6-F8E1-4B57-B8DF-89CB553A98C5}</Project>
       <Name>Domain</Name>
@@ -388,9 +393,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>61795</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost/</IISUrl>
-          <OverrideIISAppRootUrl>True</OverrideIISAppRootUrl>
-          <IISAppRootUrl>http://localhost/</IISAppRootUrl>
+          <IISUrl>http://localhost/Holy</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
