--- a/src/NoName/WebLayer/WebLayer.csproj
+++ b/src/NoName/WebLayer/WebLayer.csproj
@@ -192,6 +192,7 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Img\member_slow.png" />
     <Content Include="Content\Img\member1.jpg" />
     <Content Include="Content\Img\member2.jpg" />
     <Content Include="Content\Img\member3.jpg" />
