--- a/src/NoName/WebLayer/WebLayer.csproj
+++ b/src/NoName/WebLayer/WebLayer.csproj
@@ -177,6 +177,7 @@
     <Compile Include="CastleWindsorIoC\CastleControllerFactory.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\LogsController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\MediaFileController.cs" />
     <Compile Include="Global.asax.cs">
@@ -340,6 +341,7 @@
     <Content Include="Error.html" />
     <Content Include="Views\MediaFile\View.cshtml" />
     <Content Include="Views\MediaFile\Delete.cshtml" />
+    <Content Include="Views\Logs\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
