--- a/src/NoName/Utils/Utils.csproj
+++ b/src/NoName/Utils/Utils.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EnumUtil.cs" />
     <Compile Include="HasFileHelper.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
