--- a/src/NoName/NoName/Domain.csproj
+++ b/src/NoName/NoName/Domain.csproj
@@ -42,6 +42,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
@@ -60,6 +61,8 @@
     <Compile Include="FileType.cs" />
     <Compile Include="Genre.cs" />
     <Compile Include="MediaFile.cs" />
+    <Compile Include="Playlist.cs" />
+    <Compile Include="PlaylistSongs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Users\Admin.cs" />
     <Compile Include="Users\User.cs" />
