--- a/src/NoName/NoName/Domain.csproj
+++ b/src/NoName/NoName/Domain.csproj
@@ -58,10 +58,14 @@
     <Compile Include="Audio\AudioFile.cs" />
     <Compile Include="Audio\Song.cs" />
     <Compile Include="Entity.cs" />
-    <Compile Include="FileType.cs" />
+    <Compile Include="FileType.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Genre.cs" />
     <Compile Include="MediaFile.cs" />
-    <Compile Include="Playlist.cs" />
+    <Compile Include="Playlist.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="PlaylistSongs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Users\Admin.cs" />
