--- a/src/NoName/WebLayer/packages.config
+++ b/src/NoName/WebLayer/packages.config
@@ -2,8 +2,10 @@
 
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
+  <package id="bootstrap" version="3.3.6" targetFramework="net45" />
   <package id="Castle.Core" version="3.3.3" targetFramework="net45" />
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net45" />
+  <package id="jQuery" version="1.9.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
