--- a/src/NoName/Factories/Factories.csproj
+++ b/src/NoName/Factories/Factories.csproj
@@ -60,6 +60,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PlaylistFactory.cs" />
     <Compile Include="SongFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
