Working on multifile upload

--- a/src/NoName/WebLayer/Web.config
+++ b/src/NoName/WebLayer/Web.config
@@ -15,8 +15,7 @@
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5" />
-    <httpRuntime targetFramework="4.5" maxRequestLength="2147483647" executionTimeout="3600"
-                 requestLengthDiskThreshold="2147483647" />
+    <httpRuntime targetFramework="4.5" maxRequestLength="2147483647" executionTimeout="3600" requestLengthDiskThreshold="2147483647" />
     <customErrors mode="RemoteOnly" defaultRedirect="Error.html" />
   </system.web>
   <system.webServer>
